--- a/css/footer.css
+++ b/css/footer.css
@@ -1,17 +1,24 @@
 /* Footer */
 #footer-container {
-	background-color:  rgb(14, 118, 228);
+	display: block;
+	margin-top: 1.5%;
+	border-top: 2px solid black;
+	background-color: rgb(14, 118, 228);
+	width: 100%;
 	color: black;
 	text-align: center;
 }
 
 .footer-img {
-	max-width: max-content;
+	width: max-content;
 	margin: auto;
 
 	padding: 0.25em;
 	border-top: 2px solid black;
 	border-bottom: 2px solid black;
+	border-right: 2px solid black;
+	border-left: 2px solid black;
+	box-shadow: 2px 2px;
 }
 
 a img {
