--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
     background-color: rgb(36,113,163);
 }
@@ -6,7 +5,7 @@ body {
 /* Navbar */
 #navbar {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgb(14, 118, 228);
+    background-color: rgb(14, 126, 245);
 
     border: 3px solid black;
 
@@ -20,7 +19,8 @@ body {
 }
 #navbar-left {
     border-right: 3px solid black;
-    padding: 0.2em 0.5em 0.1em 0.5em
+    padding: 0.2em 0.5em 0.1em 0.5em;
+	cursor: pointer;
 }
 
 #global-container {
