--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,16 @@
 body {
-    background-color: rgb(36,113,163);
+    background-color: rgb(65, 141, 223);
+    font-family: "Source Sans Pro";
 }
 
 /* Navbar */
 #navbar {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgb(14, 126, 245);
+    font-family: Montserrat, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: rgb(20, 80, 143);
 
-    border-bottom: 3px solid black;
-
-    font-size: 1.5em;
+    border-bottom: 3px solid rgb(180, 210, 242);
+    color: white;
+    font-size: 1.75em;
 }
 #navbar-right {
     text-align: center;
@@ -18,8 +19,8 @@ body {
     padding: 0.2em;
 }
 #navbar-left {
-    border-right: 3px solid black;
-    padding: 0.2em 0.5em 0.1em 0.5em;
+    border-right: 3px solid rgb(180, 210, 242);
+    padding: 0.4em 0.7em 0.4em 0.7em;
 	cursor: pointer;
 }
 
@@ -57,10 +58,10 @@ body {
     padding: 1%;
 }
 #page-container h2 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Montserrat, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     max-width: max-content;
-    font-style: italic;
-    font-weight: bolder;
+    font-style: normal;
+    font-weight: bold;
     padding: 0.1em 4em 0.2em 4em;
     margin: auto;
     margin-bottom: 1.5%;
@@ -69,10 +70,10 @@ body {
     border: 3px solid black;
     border-radius: 10% 10% 10% 10%;
 	box-shadow: 0.1em 0.1em 0.05em;
-	background-color: rgb( 133, 193, 233 );
+	background-color: rgb(180, 210, 242);
 }
 #page-content {
-	background-color: rgb( 133, 193, 233 );
+	background-color: rgb(180, 210, 242);
 	text-align: justify;
 
 	font-size: 1.0em;
@@ -94,9 +95,9 @@ body {
 }
 
 .widget-title {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-style: italic;
-    font-weight: bolder;
+    font-family: Montserrat, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: normal;
+    font-weight: bold;
     border: 2.75px solid black;
     border-radius: 10% 10% 10% 10%;
     margin: 0.1em;
@@ -117,7 +118,7 @@ body {
     border: 1.5px solid black;
     border-radius: 2% 2% 2% 2%;
 	box-shadow: 0.2em 0.2em 0.1em;
-    background-color: rgb( 133, 193, 233 );
+    background-color: rgb(180, 210, 242);;
 }
 
 #navWidget {
@@ -131,7 +132,7 @@ body {
 }
 
 .linkNavWidget:hover {
-    color: orange;
+    color: rgb(65, 141, 223);
     font-weight: bold;
     margin-left: 0.5em;
     cursor: pointer;
@@ -140,7 +141,7 @@ body {
 .linkNavWidget[active] {
     margin-left: 0.5em;
     font-weight: bold;;
-    color:orange;
+    color:rgb(20, 80, 143);
 }
 
 .linkNavWidget::before {
