--- a/css/footer.css
+++ b/css/footer.css
@@ -2,10 +2,10 @@
 #footer-container {
 	display: block;
 	margin-top: 1.5%;
-	border-top: 2px solid black;
-	background-color: rgb(14, 118, 228);
+	border-top: 2px solid white;
+	background-color: rgb(20, 80, 143);
 	width: 100%;
-	color: black;
+	color: white;
 	text-align: center;
 }
 
@@ -18,10 +18,10 @@
 	margin: auto;
 
 	padding: 0.25em;
-	border-top: 2px solid black;
-	border-bottom: 2px solid black;
-	border-right: 2px solid black;
-	border-left: 2px solid black;
+	border-top: 2px solid white;
+	border-bottom: 2px solid white;
+	border-right: 2px solid white;
+	border-left: 2px solid white;
 	box-shadow: 2px 2px;
 }
 
@@ -31,7 +31,7 @@ a img {
 
 .footer-link {
 	text-decoration: none;
-	color: black;
+	color: white;
 }
 
 .footer-link:hover {
