--- a/css/menu.css
+++ b/css/menu.css
@@ -17,6 +17,7 @@
     background-color: rgb(255,255,0);
     background-color: rgba(0,0,0, 0.9);
     overflow-x: hidden;
+    border-radius: 5px;
     transition: 0.4s;
 }
 
