--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,6 @@ body {
 #navbar {
     font-family: Montserrat, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: rgb(20, 80, 143);
-
-    border-bottom: 3px solid rgb(180, 210, 242);
     color: white;
     font-size: 1.75em;
 }
@@ -19,7 +17,7 @@ body {
     padding: 0.2em;
 }
 #navbar-left {
-    border-right: 3px solid rgb(180, 210, 242);
+    background-color: rgb(10, 53, 100);
     padding: 0.4em 0.7em 0.4em 0.7em;
 	cursor: pointer;
 }
@@ -66,10 +64,10 @@ body {
     margin: auto;
     margin-bottom: 1.5%;
 
-    color: black;
-    border: 3px solid black;
-    border-radius: 10% 10% 10% 10%;
-	box-shadow: 0.1em 0.1em 0.05em;
+    color: rgb(20, 80, 143);
+    border: 3px solid rgb(65, 141, 223);
+    border-radius: 15px;
+	box-shadow: 0.1em 0.1em 0.05em rgb(10, 53, 100);
 	background-color: rgb(180, 210, 242);
 }
 #page-content {
@@ -78,10 +76,11 @@ body {
 
 	font-size: 1.0em;
 	padding: 1em;
-	min-height: 750px; /* taille min block blanc */
-
-	border: 1.5px solid black;
-	box-shadow: 0.2em 0.2em 0.1em;
+    min-height: 750px; /* taille min block blanc */
+    
+	border: 2px solid rgb(65, 141, 223);
+    box-shadow: 0.2em 0.2em 0.1em rgb(10, 53, 100);
+    border-radius: 15px;
 }
 
 /* Widgets Container */
@@ -98,8 +97,9 @@ body {
     font-family: Montserrat, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: normal;
     font-weight: bold;
-    border: 2.75px solid black;
-    border-radius: 10% 10% 10% 10%;
+    color: rgb(20, 80, 143);
+    border: 2.75px solid rgb(20, 80, 143);
+    border-radius: 8px;
     margin: 0.1em;
 }
 
@@ -115,10 +115,10 @@ body {
     margin-top: 0.50em;
     padding: 0.25em;
 	
-    border: 1.5px solid black;
-    border-radius: 2% 2% 2% 2%;
-	box-shadow: 0.2em 0.2em 0.1em;
-    background-color: rgb(180, 210, 242);;
+    border: 2px solid rgb(65, 141, 223);
+    border-radius: 15px;
+	box-shadow: 0.2em 0.2em 0.1em rgb(10, 53, 100);
+    background-color: rgb(180, 210, 242);
 }
 
 #navWidget {
@@ -134,12 +134,11 @@ body {
 .linkNavWidget:hover {
     color: rgb(65, 141, 223);
     font-weight: bold;
-    margin-left: 0.5em;
+    margin-left: 0.2em;
     cursor: pointer;
 }
 
 .linkNavWidget[active] {
-    margin-left: 0.5em;
     font-weight: bold;;
     color:rgb(20, 80, 143);
 }
