--- a/css/styles.css
+++ b/css/styles.css
@@ -138,10 +138,14 @@ body {
     font-family: Montserrat, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: normal;
     font-weight: bold;
-    color: rgb(20, 80, 143);
-    border: 3px solid rgb(20, 80, 143);
-    border-radius: 8px;
+    font-size: 90%;
+    color: white;
+    background-color: rgb(20, 80, 143);
+    border: 1px solid rgb(20, 80, 143);
+    border-radius: 10px;
     margin: 0.1em;
+    padding-top: 0.05em;
+    padding-bottom: 0.05em;
 }
 
 .widget-corps {
