add noselect on menu and widget

--- a/css/footer.css
+++ b/css/footer.css
@@ -26,7 +26,7 @@
 	border-right: 2px solid white;
 	border-left: 2px solid white;
 	border-radius: 5px;
-	box-shadow: 3px 3px rgb(65, 141, 223);
+	/*box-shadow: 3px 3px rgb(65, 141, 223);*/
 }
 
 a img {
